--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ hr {
    -moz-border-radius: 20px;
    border-radius: 20px;
    color: #FFFFFF;
-   font-family: Brush Script MT;
+   font-family: sans-serif;
    font-size: 24px;
    font-weight: 100;
    padding: 27px;
